algoritmo 1.0